<resources>
    <string name="fuel_calculator_title">Калькулятор витрати палива</string>
    <string name="distance_hint">Пройдена відстань (км)</string>
    <string name="fuel_hint">Витрачено пального (л)</string>
    <string name="calculate_button">Розрахувати</string>
    <string name="result_format">Витрата: %.2f л/100 км</string>
    <string name="invalid_input">Введіть коректні значення</string>
    <string name="back_to_main">На головну</string>
    <string name="app_name">Калькулятори палива</string>
    <string name="language_uk">Мова: Українська</string>
    <string name="language_en">Мова: Англійська</string>

    <string name="main_title">КАЛЬКУЛЯТОРИ ПАЛИВА</string>
    <string name="calculators_section">КАЛЬКУЛЯТОРИ</string>
    <string name="fuel_calculator_button">Калькулятор витрати палива\n(л/100 км)</string>
    <string name="trip_cost_button">Калькулятор вартості поїздки</string>
    <string name="other_section">ІНШЕ</string>
    <string name="fuel_tips_button">Поради щодо економії палива</string>
    <string name="about_app">Про додаток</string>
    <string name="exit">Вийти</string>

    <string name="trip_cost_title">Калькулятор вартості поїздки</string>
    <string name="trip_distance_hint">Відстань (км)</string>
    <string name="trip_fuel_consumption_hint">Витрата палива (л/100 км)</string>
    <string name="trip_fuel_price_hint">Ціна пального (грн/л)</string>
    <string name="trip_calculate_button">Розрахувати</string>
    <string name="trip_cost_result">Вартість: %.2f грн</string>
    <string name="trip_invalid_input">Введіть коректні значення</string>

    <string name="about_app_text">Це додаток для розрахунку витрат палива.\n\nВерсія: 1.0.0\nРозробник: Євгеній Болотов</string>
    <string name="close_button">Закрити</string>

    <string name="fuel_tips_title">Поради щодо економії палива</string>
    <string name="fuel_tips_text">
    • Не перевищуйте швидкість\n
    • Перевіряйте тиск у шинах\n
    • Плануйте маршрут наперед\n
    • Не перевантажуйте авто\n
    • Уникайте різких гальмувань\n
    • Використовуйте круїз-контроль
    </string>
</resources>