<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:colorBackground"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center"
        android:padding="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trip_cost_title"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="?android:textColorPrimary"

            android:layout_marginBottom="24dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_dialog_rounded"
            android:orientation="vertical"
            android:padding="24dp">

            <EditText
                android:id="@+id/distanceTripInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="5"
                android:hint="@string/trip_distance_hint"
                android:inputType="numberDecimal"
                android:backgroundTint="#888888"
                android:textColor="?android:textColorPrimary"

                android:textSize="16sp"
                android:layout_marginBottom="16dp"/>

            <EditText
                android:id="@+id/fuelConsumptionInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="5"
                android:hint="@string/trip_fuel_consumption_hint"
                android:inputType="numberDecimal"
                android:backgroundTint="#888888"
                android:textColor="?android:textColorPrimary"

                android:textSize="16sp"
                android:layout_marginBottom="16dp"/>

            <EditText
                android:id="@+id/fuelPriceInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="6"
                android:hint="@string/trip_fuel_price_hint"
                android:inputType="numberDecimal"
                android:backgroundTint="#888888"
                android:textColor="?android:textColorPrimary"

                android:textSize="16sp"
                android:layout_marginBottom="24dp"/>

            <Button
                android:id="@+id/calculateTripCostButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/trip_calculate_button"
                android:textColor="#ffffff"
                android:backgroundTint="#3770aa"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tripCostResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="18sp"
                android:textColor="?android:textColorPrimary"

                android:layout_marginTop="24dp"
                android:visibility="gone"
                android:gravity="center" />
        </LinearLayout>

        <TextView
            android:id="@+id/backToMainTrip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_to_main"
            android:textColor="?android:textColorPrimary"
            android:textSize="14sp"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:clickable="true"
            android:focusable="true" />
    </LinearLayout>
</ScrollView>