<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="?android:colorBackground"
    android:padding="20dp">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:minHeight="140dp"
        android:gravity="center"
        android:text="@string/main_title"
        android:textSize="34sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculators_section"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="12dp"/>

        <LinearLayout
            android:id="@+id/buttonFuelConsumption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/shape_rounded_variants"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp"
            android:layout_marginBottom="10dp">

            <ImageView
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/gas_station"
                android:layout_marginEnd="10dp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/fuel_calculator_button"
                android:textColor="?android:textColorPrimary"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonTripCost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/shape_rounded_variants"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageView
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/calcolus"
                android:layout_marginEnd="10dp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/trip_cost_button"
                android:textColor="?android:textColorPrimary"

                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="28dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/other_section"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/buttonFuelTips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:background="@drawable/shape_rounded_variants"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal"
            android:padding="16dp"
            android:layout_marginBottom="10dp">

            <ImageView
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/info_icon"
                android:layout_marginEnd="10dp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/fuel_tips_button"
                android:textColor="?android:textColorPrimary"

                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/languageBlock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_rounded_variants"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="16dp">


            <ImageView
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/language"
                android:layout_marginEnd="10dp"/>

            <TextView
                android:id="@+id/languageText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text=""
                android:textColor="?android:textColorPrimary"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/aboutApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:paddingEnd="8dp"
            android:text="@string/about_app"
            android:textColor="?android:textColorPrimary"

            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="|"
            android:textColor="?android:textColorPrimary"

            android:textSize="15sp" />

        <TextView
            android:id="@+id/exitApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:paddingStart="8dp"
            android:text="@string/exit"
            android:textColor="?android:textColorPrimary"
            android:textSize="15sp" />
    </LinearLayout>

</LinearLayout>